--- a/JavaScript/babylonjs-03/index.html
+++ b/JavaScript/babylonjs-03/index.html
@@ -14,12 +14,27 @@
 		}
 
 		canvas { width: 100%; height: 100%; }
-
-		#d { position: absolute; top: 0; left: 0; color: white; }
+		
+		#vr {
+			position: absolute;
+			top: 10px;
+			left: 10px;
+			padding: 10px 15px;
+			border: 2px solid #ddd;
+			background: #4587ea;
+			color: #fff;
+			transition: all 0.3s;
+		}
+		
+		#vr:hover {
+			transition: all 0.3s;
+			background: #449fff;
+			cursor: pointer;
+		}	
 	</style>
 </head>
 <body>
-	<div id="d"></div>
+	<button id="vr">Mode VR</button>
 	<canvas id="renderCanvas"></canvas>
 	<script src="Assets/js/hand-1.3.8.js"></script>
 	<script src="Assets/js/babylon.1.14.js"></script>
